fix z-index of close button

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,6 @@
   transform: translateY(0);
   width: 100%;
   height: 60px;
-  z-index: 1;
   display: flex;
   align-items: center;
   transition: all ease 0.5s;
@@ -118,7 +117,6 @@
       }
       .favMovie {
         position: relative;
-        border: 1px solid red;
         display: inline-block;
         .favMovieLength {
           position: absolute;
