--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -23,10 +23,10 @@
     padding: 10px;
     transition: all ease 0.5s;
     .closeBtn {
+      z-index: 1;
       position: absolute;
       top: 10px;
       right: 10px;
-      z-index: 12;
       color: white;
       .closeIcon {
         font-weight: bold;
